[package]
name = "mev-for-herald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
clap = { version = "4.4.4", features = ["derive", "env"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
async-trait = "0.1.64"
anyhow = "1.0.75"
lazy_static = "1.4.0"
mev-share = "0.1.4"

